# harness-python-code-rules

./: .gitignore  .pre-commit-hooks.yaml  README.md  pyproject.toml
.claude/: settings.json
scripts/: check_structure.py
src/harness_python_code_rules/: __init__.py  check_structure.py
